--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -3,7 +3,7 @@
 
 <body>
     <div class="login-container">
-        <h3>Login</h3>
+        <h3>Login</h3> <p>Dont have an account?  <a href="{% url 'accounts:signup' %}">Sign Up</a></p>
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
@@ -15,11 +15,8 @@
                 <input type="password" name="password" id="password" required>
             </div>
             <button type="submit">Login</button>
+            
         </form>
-        <div class="links">
-           
-            <p>Dont have an account?  <a href="{% url 'accounts:signup' %}">Sign Up</a></p>
-        </div>
     </div>
 
     <style>
