added content app

--- a/dashboard/templates/profile.html
+++ b/dashboard/templates/profile.html
@@ -2,7 +2,9 @@
 
 {% block dashboard_content %}
 <div class="h-100 border d-flex flex-column align-items-center justify-content-center text-light">
-    {% block community_content %}
+
+    {% block profile_content %}
     {% endblock %}
+
 </div>
 {% endblock %}
