--- a/accounts/templates/home.html
+++ b/accounts/templates/home.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="theme-color" content="#0f172a">
-    <title>CShub - Home</title>
+    <title>CShub</title>
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
